Fix view details for feat. product section on safari (#1269)

--- a/assets/section-featured-product.css
+++ b/assets/section-featured-product.css
@@ -48,6 +48,7 @@
 .share-button + .product__view-details {
   display: inline-flex;
   float: right;
+  align-items: center;
 }
 
 .share-button + .product__view-details::after {
